# UNEEX2020.LinuxDev

02_BuildEnv/: hello.c
03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  pcre2_demo.c
06_Debugging/: a.out  de_bug.c
07_DebuggingTracing/: Makefile  protector.c
08_TestingCoverage/: CMakeLists.txt
08_TestingCoverage/src/: CMakeLists.txt  buf.c  buf.h
08_TestingCoverage/test/: CMakeLists.txt  tests.c
09_I18nL10n/: CMakeLists.txt  oracle.c  oracle.pot
10_Documenting/: Doxyfile  oracle.c  oracle.pot  oracle_ru.po
11_Toolkits/: CMakeLists.txt  main.c
12_ScriptingText/: Makefile.am  configure.ac  oracle.c  oracle_ru.po
13_PatchInstall/: CMakeLists.txt  oracle.c  oracle.pot  oracle_ru.po
